Дописано введение.(ост (?) ссылкии, ссылки литер.)

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,92 @@
+\section{Введение}
+
+Движение несжимаемой жидкости с постоянной плотностью, имеющую ограниченную область $\Omega\subset R^n, n=2,3$ на временном интервале 
+$[0,T), T>0$, описывается системой уравнений Коши вида (см., пример [1]):
+\begin{equation}\label{eq:1.1}
+    \begin{gathered}
+        \frac{\partial v}{\partial t}+\sum_{i=1}^n v_i\frac{\partial v}{\partial x_i}+ grad \ p=Div \ \sigma + f
+    \end{gathered}
+\end{equation}
+\begin{equation}\label{eq:1.2}
+    \begin{gathered}
+        div v=0, \ (t,x)\in (0,T)\times\Omega,
+    \end{gathered}
+\end{equation}
+где $v (x, t) = (v_1,...,v_n)$ --- вектор скорости частицы в точке $x$ в момент времени $t$, $(v_1,...,v_n)$ --- компоненты $v$,
+$p = p (x, t)$ --- давление жидкости в точке $x$ в момент времени $t$, а $f = f (x, t)$ --- это плотность внешних сил 
+(также называется объемом), действующих на жидкость. Символ $Div$ o обозначает вектор
+$$\bigg(\sum_{j=1}^n\frac{\partial\sigma_{1j}}{\partial x_j},\sum_{j=1}^n\frac{\partial\sigma_{2j}}{\partial x_j},...,\sum_{j=1}^n\frac{\partial\sigma_{nj}}{\partial x_j}\bigg),$$
+координаты которого представляют собой расходимость строк матрицы $\sigma = (\sigma_{ij}, (x))$, где $\sigma$ --- девиатор 
+тензора напряжений.
+
+Система \ref{eq:1.1} "= \ref{eq:1.2} описывает потоки всех видов жидкостей, но содержит девиатор тензора напряжений, 
+который не выражается явно через неизвестные системы. Как правило, для выражения девиатора тензора напряжений через 
+неизвестные системы \ref{eq:1.1} "= \ref{eq:1.2} используются соотношения между девиатором тензора напряжений и тензором 
+скоростей деформации $\mathcal{E}(v)=(\mathcal{E}(v))^{i=1,...,n}_{j=1,...,n},\mathcal{E}_{ij}(v)=\frac{1}{2}(\frac{\partial v_i}{\partial x_j}+\frac{\partial v_j}{\partial x_i})$, 
+и их производные по времени. Устанавливая связь между девиатором тензора напряжений и тензором скоростей деформации и их 
+производных, мы определяем тип жидкости. Это отношение называется конститутивным или реологическим соотношением и обычно 
+получается методом механистической модели (см., Например, [2]). В реологии реальная структура часто заменяется некоторой 
+моделью, предполагая, что поведение этой модели аналогично поведению структуры.  Эта модель состоит из элементов, которых 
+нет в реальном корпусе: пружин, поршней, подъемников и т.д. Обратите внимание, что эти соотношения являются гипотезами, 
+которые необходимо проверить для конкретных жидкостей экспериментальными данными. 
+
+Реологическое соотношение, описывающее движение вязкоупругой среды, имеет следующий вид:
+\begin{equation}\label{eq:1.3}
+    \begin{gathered}
+        \sigma=2\nu\mathcal{E}+2\varkappa\stackrel{.}{\mathcal{E}},
+    \end{gathered}
+\end{equation}
+где $v> 0$ --- вязкость жидкости, а $\varkappa> 0$ --- время замедления (задержки). Эта модель движения жидкости 
+описывает движение вязкой неньютоновской жидкости, которой требуется время, чтобы начать движение под действием мгновенно 
+приложенной силы. 
+
+В реологическом соотношении \ref{eq:1.3} мы имеем производную по времени $\stackrel{.}{\mathcal{E}}$. К сожалению, 
+метод механистических моделей не указывает, какой вывод мы должны использовать (полную, частную или любую специальную 
+производную). Матерматические исследования начались с рассмотрения частной производной в \ref{eq:1.3}. 
+Соответствующая модель называется моделью Фойгта. Затем А.П. Осколков рассмотрел случай полной производной [3]. 
+Но позже в его работе были обнаружены ошибки [4].  В работе [5] дано полное доказательство существования слабых решений 
+в модели \ref{eq:1.1} "= \ref{eq:1.2} с полной производной. Отметим, что стационарный случай этой задачи рассматривался 
+в [6].
+
+В последние годы рациональная механика [7] повлияла на ученых таким образом, что они начали исследовать реологические 
+отношения, которые не зависят от наблюдателя, то есть они не изменяются при галилеевской замене переменных:
+\begin{equation}\label{eq:1.4}
+    \begin{gathered}
+        t^*=t+a,
+    \end{gathered}
+\end{equation}
+\begin{equation}\label{eq:1.5}
+    \begin{gathered}
+        x^*=x^*_0(t)+Q(t)(t-t_0),
+    \end{gathered}
+\end{equation}
+где $a$ --- значение времени, $x_0$ --- точка в пространстве, $x^*_0$ --- функция времени, функция со значениями в наборе 
+ортогомальных тензоров. 
+
+Другими словами, если исходная тензорная функция изменяется по закону \ref{eq:1.4} "= \ref{eq:1.5}, 
+будет ли реологическое соотношение одинаковым в разных системах отсчета? В случае частных и полных производных ответ 
+отрицательный. Понятие объективной производной позволяет дать утвердительный ответ на этот вопрос.
+
+\begin{definition}
+    Пусть $G$ --- симметричная тензорнозначная функция двух тензорных аргументов, а $T(t, x)$ --- симметричная 
+    тензорнозначная функция. Оператор формы
+    $$\frac{DT(t,x)}{Dt}=\frac{dT(t,x)}{dt}+G(\nabla v(t,x),T(t,x))$$
+    называется объективной производной, если при любой замене системы отсчета \ref{eq:1.4} "= \ref{eq:1.5} выполняется 
+    равенство
+    $$\frac{D^*T^*(t,x)}{Dt^*}=Q(t)\frac{DT(t,x)}{Dt}Q(t)^T$$
+    выполняется для всех симметричных тензорнозначных функций, не зависящих от репеременной $T(t, x)$. 
+\end{definition}
+
+Примером объективной производной тензора является сглаженная производная Яуманна (см. [8]):
+$$\frac{DT(t,x)}{Dt}=\frac{dT(t,x)}{dt}+T(t,x)W_{\rho}(t,x)-W_{\rho}(t,x)T(t,x), $$
+$$W_{\rho}(v)(t,x)=\int\limits_{R^n}{\rho}(x-y)W(x-y)dy,$$
+где $\rho: R^n\rightarrow R$ --- гладкая функция с компактным носителем такая, что $\int\limits_{R^n}\rho (y) dy = 1$
+и $\rho(x) = \rho(v)$ для $x$ и $y$ с одинаковой Евклидовой нормой:
+$$W(v)=(W_{ij}(v))^{i=1,...,n}_{j=1,...,n}, W_{ij}(v)=\frac{1}{2}\bigg(\frac{\partial v_i}{\partial x_j}+\frac{\partial v_j}{\partial x_i}\bigg)$$
+является тензором завихренности. 
+Подставляя правую часть \ref{eq:1.3} со сглаженной производной Яуманна для o в уравнения \ref{eq:1.1} "= \ref{eq:1.2} для 
+стационарного случая, получаем
+
 \begin{equation}\label{eq:1.6}
     \begin{gathered}
         \sum_{i=1}^n v_i\frac{\partial v}{\partial x_i}-\nu\Delta v- 2\varkappa Div\bigg(v_k\frac{\partial\mathcal{E}(v)}
@@ -31,7 +120,7 @@
 уравнения.
 
 
-\section{Слабое условие}
+\section{Слабое решение}
 
 Обозначим через $C_0^{\infty}(\Omega)^n$ пространство функций класса $C^{\infty}$, отображаемых из $\Omega$ в $R^n$ с
 компактным носителем в $\Omega$. Также нам потребуется определение следующего функционального пространства
