Добавлен список литературы

--- a/main.tex
+++ b/main.tex
@@ -559,3 +559,35 @@ $$\varepsilon\|v\|^2_X+\lambda\frac{\nu\|v\|^2_V}{2}\leqslant\lambda\frac{\|f\|^
     \end{equation*}
     Это доказывает, что $v_* \in V$. Это завершает доказательство теоремы 2.1.
 \end{proof}
+
+\section{Список литературы}
+
+[1] R.V.Goldstein, V.A. Gorodtsov, Mechanics of Continuous Media, Part 1; Fundamentals and
+Classical Models of Fluids, Nauka, Fizmatlit, Moscow, 2000, (in Russian).\\
+
+[2] M. Reiner, Rheology, Handbuch der Physik, S, Flugge (Ed.), Bd. VI, Springer, 1958.\\
+
+[3] A.P. Oskolkov, On some quasilinear systems occuring in the study of motion of viscous fluids,
+Zap. Nauchn. Semin. Leningr, Otd. Mat. Inst. Steklova, 52(1975), 128-157, (in Russian).\\
+
+[4] O.A. Ladyzhenskaya, On some gaps in two of my papers on the Navier-Stokes equations and
+the way of closing them, Zap. Nauchn. Semin, POMI, 271(2000), 151-155, (in Russian).\\
+
+[5] V.G. Zvyagin, M.V. Turbin, Mathematical problems of viscoelastic media hydrodynamics, Kracand (URSS), 
+Moscow, 2012, (in Russian).\\
+
+[6] A.V. Zvyagin, Solvability of a stationary model of motion of weak aqueous polymer solutions,
+Russian Mathematics (Iz. VUZ), 55(2011), no. 2, 90-92.\\
+
+[7] C. Truesdell, A First Course in Rational Continuum Mechanics, The John Hopkins University,
+Baltimore, 1972.\\
+
+[8] V.G. Zvyagin, D.A. Vorotnikov, Approwimating-topological methods in some problems of hydrodinamics, 
+J. Fixed Point Theory Appl., 3(2008), no. 1, 23-49.\\
+
+[9] M. Kamenskii, V. Obukhovskii, P. Zecca, Condensing multivalued maps and semilinear differential 
+inclusions in Banach spaces, De Gruyter Series In Nonlinear Anal. Appl., 7, Walter de Gruyter, Berlin-New York, 2001.\\
+
+[10] V.G. Zvyagin, D.A. Vorotnikov, Topological approzimayion methods for evolutionary problems
+of nonlinear hydrodinamics, De Gruyter Series in Nonlinear Anal. Appl., 12, Walter de Gruyter, Berlin-New York, 2008.
+
