--- a/course_work.tex
+++ b/course_work.tex
@@ -20,6 +20,8 @@
 \usepackage[unicode]{hyperref}
 \usepackage{footnotebackref}
 
+\numberwithin{equation}{section}
+
 \begin{document}
 %    \includepdf{MukaseevaTitul_signed.pdf}
 %    \includepdf{MukaseevaTitul.pdf}
